# Assets

./: .gitignore  README.md  gen_skin_data.py  gen_skin_images.py  pyproject.toml  refresh_prices.py  requirements.txt
src/: constants.py  gen_container_metadata.py  gen_images.py  gen_item_images.py  gen_item_metadata.py  gen_skin_data.py  gen_skin_images.py  refresh_prices.py  util.py
