[project]
name = "spacecases-assets"
version = "0.1.0"
requires-python = ">= 3.12.3"
dependencies = [
    "brotlipy==0.7.0",
    "pillow==11.0.0",
    "spacecases-common==0.9.5",
    "requests==2.32.3",
    "types-requests==2.32.0.20241016",
    "ruff == 0.8.4",
    "mypy == 1.14.0"
]

[tool.mypy]
exclude = [
    "build",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
